# discord-nomad

./: README.md  pyproject.toml
discord_nomad/nomad/: client.py  enum.py
discord_nomad/nomad/clients/: __init__.py  allocation.py  base.py  job.py
